
    HADOOP-9009. Add SecurityUtil methods to get/set authentication method
    (daryn via bobby)

    HADOOP-9010. Map UGI authenticationMethod to RPC authMethod (daryn via
    bobby)

    HADOOP-9013. UGI should not hardcode loginUser's authenticationType (daryn
    via bobby)

    HADOOP-9014. Standardize creation of SaslRpcClients (daryn via bobby)

  OPTIMIZATIONS

    HADOOP-8866. SampleQuantiles#query is O(N^2) instead of O(N). (Andrew Wang
    via atm)

    HADOOP-8926. hadoop.util.PureJavaCrc32 cache hit-ratio is low for static
    data (Gopal V via bobby)

  BUG FIXES

    HADOOP-8795. BASH tab completion doesn't look in PATH, assumes path to
    executable is specified. (Sean Mackrory via atm)

    HADOOP-8780. Update DeprecatedProperties apt file. (Ahmed Radwan via
    tomwhite)

    HADOOP-8833. fs -text should make sure to call inputstream.seek(0)
    before using input stream. (tomwhite and harsh)

    HADOOP-8791. Fix rm command documentation to indicte it deletes
    files and not directories. (Jing Zhao via suresh)

    HADOOP-8616. ViewFS configuration requires a trailing slash. (Sandy Ryza
    via atm)

    HADOOP-8756. Fix SEGV when libsnappy is in java.library.path but
    not LD_LIBRARY_PATH. (Colin Patrick McCabe via eli)

    HADOOP-8881. FileBasedKeyStoresFactory initialization logging should
    be debug not info. (tucu)

    HADOOP-8913. hadoop-metrics2.properties should give units in comment 
    for sampling period. (Sandy Ryza via suresh)

    HADOOP-8878. Uppercase namenode hostname causes hadoop dfs calls with 
    webhdfs filesystem and fsck to fail when security is on.
    (Arpit Gupta via suresh)

    HADOOP-8901. GZip and Snappy support may not work without unversioned
    libraries (Colin Patrick McCabe via todd)

    HADOOP-8883. Anonymous fallback in KerberosAuthenticator is broken.
    (rkanter via tucu)

    HADOOP-8900. BuiltInGzipDecompressor throws IOException - stored gzip size